--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -32,8 +32,8 @@ CU       &  Inlets   &  Indicators \\
  & Barkley  & Nahmint , \emph{Sarita}, \emph{Somass}  \\
  & Clayoquot & Bedwell/Ursus , Megin , Moyeha , \emph{Tranquil} \\
 \multirow{2}{*}{\parbox{4cm}{West Vancouver Island-Nootka \& Kyuquot (CK-32)}} & Nootka/Esperanza  & \emph{Burman}, \emph{Conuma}, \emph{Gold}, \emph{Leiner}, Tahsis  \\
-&  Kyuquot &  Zeballos, Artlish, Kaouk, Tahsish \\
-West Vancouver Island-North (CK-33) &  Quatsino  &  \emph{Cayeghle}, Marble \\                     
+&  Kyuquot &  \emph{Zeballos}, Artlish, Kaouk, Tahsish \\
+West Vancouver Island-North (CK-33) &  Quatsino  &  Cayeghle, Marble \\                     
 \hline
 \end{tabular}
 (\#tab:chinook-Overview)
