--- a/caseStudyWP_FN/04-chap4.Rmd
+++ b/caseStudyWP_FN/04-chap4.Rmd
@@ -35,8 +35,8 @@ UC       &  Inlets   &  Populations indicatrices \\
  & Barkley  & Nahmint , \emph{Sarita}, \emph{Somass}  \\
  & Clayoquot & Bedwell/Ursus , Megin , Moyeha , \emph{Tranquil} \\
 \multirow{2}{*}{\parbox{4cm}{Ouest de l’île de Vancouver – Nootka \& Kyuquot (CK-32)}} & Nootka/Esperanza  & \emph{Burman}, \emph{Conuma}, \emph{Gold}, \emph{Leiner}, Tahsis  \\
-&  Kyuquot &  Zeballos, Artlish, Kaouk, Tahsish \\
-Ouest de l’île de Vancouver – nord(CK-33) &  Quatsino  &  \emph{Cayeghle}, Marble \\                     
+&  Kyuquot &  \emph{Zeballos}, Artlish, Kaouk, Tahsish \\
+Ouest de l’île de Vancouver – nord(CK-33) &  Quatsino  &  Cayeghle, Marble \\                     
 \hline
 \end{tabular}
 (\#tab:chinook-Overview)
