--- a/guidelinesWP_FN/bib/refs.bib
+++ b/guidelinesWP_FN/bib/refs.bib
@@ -1880,11 +1880,13 @@ A comparison of the recovery objectives with recent historical abundances indica
 	pages = {fsab165},
 }
 
-@article{holtCaseStudyApplicationsInpress,
+@article{holtCaseStudyApplications2023,
 	title = {Case {Study} {Applications} of {LRP} {Estimation} {Methods} to {Pacific} {Salmon} {Stock} {Management} {Units}},
-	volume = {202n/nnnn},
+	volume = {2023/010},
 	journal = {DFO Can. Sci. Advis. Sec. Res. Doc.},
 	author = {Holt, K.R. and Holt, C.A. and Warkentin, L. and Wor, C. and Davis, B. and Arbeider, M. and Bokvist, J. and Crowley, S. and Grant, S. and Luedke, W. and McHugh, D. and Picco, C. and Van Will, P.},
+	year = {2023},
+	pages = {iv + 129 p.},
 }
 
 @article{pricePortfolioSimplificationArising2021a,
