--- a/guidelinesWP/index.Rmd
+++ b/guidelinesWP/index.Rmd
@@ -24,10 +24,12 @@ address: |
   ^4^National Headquarters\
      Fisheries and Oceans Canada, Ottawa, ON, Canada\
 
-month: Month # fill in
+month: "Month" # fill in
 year: 2022
-report_number: nnn
+report_number: 009
 region: Pacific Region
+isbn: "978-0-660-46975-1"
+cat_no: "Fs70-5/2023-009E-PDF"
 citation_other_language: "Holt, C.A., Holt, K., Warkentin, L., Wor, C., Connors, B., Grant, S. et Huang, A.-M.. Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. DFO Secr. can. de consult. sci. du MPO. Doc. de rech 2022/nnn. iv + 13 p."
 abstract: |
 
